@@ -1,4 +1,4 @@
-/*	$OpenBSD: uuencode.c,v 1.13 2002/02/24 18:31:09 markus Exp $	*/
+/*	$OpenBSD: uuencode.c,v 1.14 2002/02/25 16:33:27 markus Exp $	*/
 
 /*
  * Copyright (c) 2000 Markus Friedl.  All rights reserved.
@@ -28,7 +28,7 @@
 #include "xmalloc.h"
 #include "uuencode.h"
 
-RCSID("$OpenBSD: uuencode.c,v 1.13 2002/02/24 18:31:09 markus Exp $");
+RCSID("$OpenBSD: uuencode.c,v 1.14 2002/02/25 16:33:27 markus Exp $");
 
 int
 uuencode(u_char *src, u_int srclength,
@@ -58,7 +58,7 @@ uudecode(const char *src, u_char *target, size_t targsize)
 }
 
 void
-dump_base64(FILE *fp, u_char *data, int len)
+dump_base64(FILE *fp, u_char *data, u_int len)
 {
 	u_char *buf = xmalloc(2*len);
 	int i, n;
