@@ -1,4 +1,4 @@
-/*	$OpenBSD: uuencode.h,v 1.8 2001/06/26 17:27:25 markus Exp $	*/
+/*	$OpenBSD: uuencode.h,v 1.9 2002/02/25 16:33:27 markus Exp $	*/
 
 /*
  * Copyright (c) 2000 Markus Friedl.  All rights reserved.
@@ -28,5 +28,5 @@
 #define UUENCODE_H
 int	 uuencode(u_char *, u_int, char *, size_t);
 int	 uudecode(const char *, u_char *, size_t);
-void	 dump_base64(FILE *, u_char *, int);
+void	 dump_base64(FILE *, u_char *, u_int);
 #endif
